design and end top header full

--- a/index.html
+++ b/index.html
@@ -1,26 +1,65 @@
 ﻿<!doctype html>
 <html lang="en">
-	<head>
-		<title>Document</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-sacle=1">
-		<link href="css/gridLayout.css" rel="stylesheet" type="text/css">
-		<link href="css/reset.css" rel="stylesheet" type="text/css">
-		<link href="css/style.css" rel="stylesheet" type="text/css">
+<head>
+	<title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-sacle=1">
+	<link href="css/gridLayout.css" rel="stylesheet" type="text/css">
+	<link href="css/reset.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
 
-	</head>
-	
-	<body>
-	<!-------- HEADER ------------>
-	<div id="header"></div>
+</head>
 
-	<!--------- MAIN ------->
-	<div id="main"></div>
+<body>
+<!-------- HEADER ------------>
+<div id="top__header" class="dark__bg">
+	<div class="wrapper">
+		<div class="row a_i_center">
+			<div class="column__12 column__md__8 info__col">
+				<div class="info__address">
+					<p>
+						<i class="fa-light fa-map-marker-alt"></i>
+						Akershusstranda 20, 0150 Oslo, Norway
+					</p>
+				</div>
+				<div class="info__email">
+					<a href="#">
+						<i class="info__icon fa-light fa-email"></i>
+						email@yahoo.com
+					</a>
+				</div>
+			</div>
+			<div class="column__md__4 social__col">
+				<ul class="social__list d__flex j_c_end">
+					<li class="social__item">
+						<a href="#">
+							<i class="fab fa-linkedin-in"></i>
+						</a>
+					</li>
+					<li class="social__item">
+						<a href="#">
+							<i class="fa-light fa-telegram"></i>
+						</a>
+					</li>
+					<li class="social__item">
+						<a href="#">
+							<i class="fab fa-github-alt"></i>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+<div id="header"></div>
+
+<!--------- MAIN ------->
+<div id="main"></div>
 
 
-	<!--------- FOOTER ---------->
-	<div id="footer"></div>
-		
+<!--------- FOOTER ---------->
+<div id="footer"></div>
 
-	</body>
+
+</body>
 </html>																														
