--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html lang="en">
 <head>
-	<title>Document</title>
+	<title>Kind Heart Charitygit </title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-sacle=1">
 	<link href="css/gridLayout.css" rel="stylesheet" type="text/css">
@@ -51,7 +51,27 @@
 		</div>
 	</div>
 </div>
-<div id="header"></div>
+<div id="header">
+	<div class="wrapper">
+		<div class="row">
+			<div class="logo__col column__8 column__md__3">
+				<div class="logo">
+					<a href="#" class="d__flex a_i_center">
+						<img src="images/logo.png" alt="">
+						<div class="logo__title">
+							<h1 class="text__primary">Kind Heart Charity</h1>
+							<small class="text__second">Non-profit Organization</small>
+						</div>
+					</a>
+				</div>
+			</div>
+			<nav class="main__navbar__col column__4 column__md__9">
+
+			</nav>
+
+		</div>
+	</div>
+</div>
 
 <!--------- MAIN ------->
 <div id="main"></div>
