end main menu navbar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</div>
 	</div>
 </div>
-<div id="header">
+<div id="header" >
 	<div class="wrapper">
 		<div class="row">
 			<div class="logo__col column__8 column__md__3">
@@ -65,9 +65,34 @@
 					</a>
 				</div>
 			</div>
-			<nav class="main__navbar__col column__4 column__md__9">
+			<div class="main__navbar__col column__4 column__md__9 d__flex j_c_end a_i_center">
+				<nav class="main__navbar a_i_center">
+					<ul class="nav__menu">
+						<li class="nav__menu__item">
+							<a href="index.html">home</a>
+						</li>
+						<li class="nav__menu__item">
+							<a href="index.html">about</a>
+						</li>
+						<li class="nav__menu__item">
+							<a href="index.html">causes</a>
+						</li>
+						<li class="nav__menu__item">
+							<a href="index.html">volunteer</a>
+						</li>
+						<li class="nav__menu__item">
+							<a href="index.html">news</a>
+						</li>
+						<li class="nav__menu__item">
+							<a href="index.html">contact</a>
+						</li>
 
-			</nav>
+
+
+					</ul>
+					<a href="pages/donate.html" class="header__button button__link button__link__outline__second">Donate</a>
+				</nav>
+			</div>
 
 		</div>
 	</div>
