--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-sacle=1">
 	<link href="css/gridLayout.css" rel="stylesheet" type="text/css">
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/slick-slider/slick.min.css">
+	<link rel="stylesheet" href="css/slick-slider/slick-theme.min.css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 
+	<script src="js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -106,5 +109,6 @@
 <div id="footer"></div>
 
 
+<script src="js/slick.min.js"></script>
 </body>
 </html>																														
