run slick slider and styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 
 	<script src="js/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -102,7 +103,38 @@
 </div>
 
 <!--------- MAIN ------->
-<div id="main"></div>
+<div id="main">
+	<section id="slider">
+		<div class="slider__wrapper wrapper__full">
+				<div class="row row__nopadding">
+					<div class="slider__col column__12">
+						<div class="slider__item">
+						<img src="images/slide/donations.jpg" alt="">
+						<div class="slider__item__caption">
+							<h2 class="slider__item__title text__second">Humanity</h2>
+							<small class="slider__item__description text__second">You can support us to grow more</small>
+						</div>
+					</div>
+						<div class="slider__item">
+							<img src="images/slide/charity.jpg" alt="">
+							<div class="slider__item__caption">
+								<h2 class="slider__item__title text__second">be a Kind Heart</h2>
+								<small class="slider__item__description text__second">You can support us to grow more</small>
+							</div>
+						</div>
+						<div class="slider__item">
+							<img src="images/slide/volunteer.jpg" alt="">
+							<div class="slider__item__caption">
+								<h2 class="slider__item__title text__second">Non-profit</h2>
+								<small class="slider__item__description text__second">You can support us to grow more</small>
+							</div>
+						</div>
+					</div>
+				</div>
+		</div>
+	</section>
+
+</div>
 
 
 <!--------- FOOTER ---------->
@@ -110,5 +142,6 @@
 
 
 <script src="js/slick.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>																														
