--- a/index.html
+++ b/index.html
@@ -133,7 +133,57 @@
 				</div>
 		</div>
 	</section>
-
+	<section id="features" class="inner_space_y">
+		<div class="wrapper">
+			<div class="row j_c_center">
+				<div class="section__header">
+					<h2 class="section__title text__second">Welcome to Kind Heart Charity</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="column__12 column__sm__6 column__md__3">
+					<div class="feature__card card__box">
+						<a href="">
+							<img src="images/icons/hands.png" alt="">
+							<p class="text__primary">
+								<strong>Become a volunteer</strong>
+							</p>
+						</a>
+					</div>
+				</div>
+				<div class="column__12 column__sm__6 column__md__3">
+					<div class="feature__card card__box">
+						<a href="">
+							<img src="images/icons/heart.png" alt="">
+							<p class="text__primary">
+								<strong>Become a volunteer</strong>
+							</p>
+						</a>
+					</div>
+				</div>
+				<div class="column__12 column__sm__6 column__md__3">
+					<div class="feature__card card__box">
+						<a href="">
+							<img src="images/icons/receive.png" alt="">
+							<p class="text__primary">
+								<strong>Make a Donation</strong>
+							</p>
+						</a>
+					</div>
+				</div>
+				<div class="column__12 column__sm__6 column__md__3">
+					<div class="feature__card card__box">
+						<a href="">
+							<img src="images/icons/scholarship.png" alt="">
+							<p class="text__primary">
+								<strong>Scholarship Program</strong>
+							</p>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
 
 
