--- a/index.html
+++ b/index.html
@@ -105,32 +105,28 @@
 <!--------- MAIN ------->
 <div id="main">
 	<section id="slider">
-		<div class="slider__wrapper wrapper__full">
-				<div class="row row__nopadding">
-					<div class="slider__col column__12">
-						<div class="slider__item">
-						<img src="images/slide/donations.jpg" alt="">
-						<div class="slider__item__caption">
-							<h2 class="slider__item__title text__second">Humanity</h2>
-							<small class="slider__item__description text__second">You can support us to grow more</small>
-						</div>
-					</div>
-						<div class="slider__item">
-							<img src="images/slide/charity.jpg" alt="">
-							<div class="slider__item__caption">
-								<h2 class="slider__item__title text__second">be a Kind Heart</h2>
-								<small class="slider__item__description text__second">You can support us to grow more</small>
-							</div>
-						</div>
-						<div class="slider__item">
-							<img src="images/slide/volunteer.jpg" alt="">
-							<div class="slider__item__caption">
-								<h2 class="slider__item__title text__second">Non-profit</h2>
-								<small class="slider__item__description text__second">You can support us to grow more</small>
-							</div>
-						</div>
-					</div>
+		<div class="slider__wrapper">
+			<div class="slider__item">
+				<img src="images/slide/donations.jpg" alt="">
+				<div class="slider__item__caption">
+					<h2 class="slider__item__title text__second">Humanity</h2>
+					<small class="slider__item__description text__second">You can support us to grow more</small>
 				</div>
+			</div>
+			<div class="slider__item">
+				<img src="images/slide/charity.jpg" alt="">
+				<div class="slider__item__caption">
+					<h2 class="slider__item__title text__second">be a Kind Heart</h2>
+					<small class="slider__item__description text__second">You can support us to grow more</small>
+				</div>
+			</div>
+			<div class="slider__item">
+				<img src="images/slide/volunteer.jpg" alt="">
+				<div class="slider__item__caption">
+					<h2 class="slider__item__title text__second">Non-profit</h2>
+					<small class="slider__item__description text__second">You can support us to grow more</small>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="features" class="inner_space_y">
