end main about top section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
 <!--------- MAIN ------->
 <div id="main">
+	<!--================== slider ===============-->
 	<section id="slider">
 		<div class="slider__wrapper">
 			<div class="slider__item">
@@ -129,6 +130,8 @@
 			</div>
 		</div>
 	</section>
+
+	<!--================== features ===============-->
 	<section id="features" class="inner_space_y">
 		<div class="wrapper">
 			<div class="row j_c_center">
@@ -179,6 +182,64 @@
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<!--================== about ===============-->
+	<section id="about">
+		<!-------- about top row ------->
+		<div class="about__top inner_space_y section__bg__color">
+			<div class="wrapper">
+				<div class="row">
+					<!-- about image -->
+					<div class="column__12 column__lg__6  about__img__col">
+						<div class="box__image">
+							<img src="images/group-people.jpg" alt="">
+						</div>
+					</div>
+					<!-- about content -->
+					<div class="column__12 column__lg__6">
+						<div class="about__desc__card card__box">
+							<h2 class="card__title text__second">Our Story</h2>
+							<h5 class="card__subtitle text__primary">Kind Heart Charity, Non-Profit Organization</h5>
+							<p>
+								This is a Bootstrap 5.2.2 CSS template for charity organization websites. You can feel free to use it. Please tell your friends about TemplateMo website. Thank you. HTML CSS files updated on 20 Oct 2022.
+							</p>
+						</div>
+						<div class="row">
+							<!-- about story -->
+							<div class="column__12 column__md__6">
+								<div class="about__desc__card card__box">
+									<h5 class="card__subtitle text__primary">Our Mission</h5>
+									<p>
+										Sed leo nisl, posuere at molestie ac, suscipit auctor quis metus
+									</p>
+									<ul class="about__list">
+										<li>Charity Theme</li>
+										<li>Semantic HTML</li>
+									</ul>
+								</div>
+							</div>
+							<!-- about counter -->
+							<div class="column__12 column__md__6">
+								<div class="about__desc__card card__box">
+									<div class="about__counter">
+										<span class="counter__number text__primary">2020</span>
+										<span class="counter__title text__second">Founded</span>
+									</div>
+									<div class="about__counter">
+										<span class="counter__number text__primary">740M</span>
+										<span class="counter__title text__second">Donations</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<!---------- about bottom row -------->
 	</section>
 </div>
 
