end main about bottom section

--- a/index.html
+++ b/index.html
@@ -234,7 +234,48 @@
 							</div>
 						</div>
 					</div>
-
+				</div>
+			</div>
+		</div>
+		<div class="about__bottom inner_space_y">
+			<div class="wrapper">
+				<div class="row j_c_center">
+					<div class="about__img__col column__12 column__md__6 column__lg__4">
+						<div class="box__image about__img__col member__img">
+							<img src="images/portrait-charity.jpg" alt="">
+						</div>
+					</div>
+					<div class="column__12 column__md__6 column__lg__4">
+						<div class="member__content about__desc__card card__box">
+							<h2 class="member__name card__title text__second">Sandy Chan</h2>
+							<p class="member__job">Co-Founding Partner</p>
+							<div class="member__desc">
+								<p>
+									You are not allowed to redistribute this template ZIP file on any other template collection website. Please contact TemplateMo for more information.
+								</p>
+								<p>
+									You are not allowed to redistribute this template ZIP file on any other template collection website. Please contact TemplateMo for more information.
+								</p>
+							</div>
+							<ul class="social__list social__list__solid d__flex j_c_start">
+								<li class="social__item">
+									<a href="#">
+										<i class="fab fa-linkedin-in"></i>
+									</a>
+								</li>
+								<li class="social__item">
+									<a href="#">
+										<i class="fa-light fa-telegram"></i>
+									</a>
+								</li>
+								<li class="social__item">
+									<a href="#">
+										<i class="fab fa-github-alt"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
