end design call to action section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</a>
 					</li>
 					<li class="social__item">
-						<a href="#">
+						<a href="http://github.com/javdev68">
 							<i class="fab fa-github-alt"></i>
 						</a>
 					</li>
@@ -103,7 +103,7 @@
 </div>
 
 <!--------- MAIN ------->
-<div id="main">
+<main id="main">
 	<!--================== slider ===============-->
 	<section id="slider">
 		<div class="slider__wrapper">
@@ -269,7 +269,7 @@
 									</a>
 								</li>
 								<li class="social__item">
-									<a href="#">
+									<a href="https://github.com/javdev68">
 										<i class="fab fa-github-alt"></i>
 									</a>
 								</li>
@@ -282,7 +282,39 @@
 
 		<!---------- about bottom row -------->
 	</section>
-</div>
+
+	<!--=============== call to action ===============-->
+	<section id="cta" class="cta__section inner_space_y">
+		<div class="wrapper">
+			<div class="row j_c_center a_i_center">
+				<!-- cta title -->
+				<div class="col__12 column__md__6 column__lg__4">
+					<div class="cta__title__box">
+						<h2 class="cta__title section__title">
+							Make an impact.
+							<br>
+							Save lives.
+						</h2>
+					</div>
+				</div>
+				<!-- cat button -->
+				<div class="column__12 column__md__6 column__lg__4">
+					<div class="cta__btn__block">
+						<a href="#" class="cta__link link">Make a donation</a>
+						<a href="#" class="cta__link button__link button__link__second">Become a volunteer</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+
+
+
+
+
+</main>
 
 
 <!--------- FOOTER ---------->
