end design donation cards

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			</div>
 			<div class="row">
 				<div class="column__12 column__sm__6 column__md__3">
-					<div class="feature__card card__box">
+					<div class="feature__card card__box card__box__shadow">
 						<a href="">
 							<img src="images/icons/hands.png" alt="">
 							<p class="text__primary">
@@ -151,7 +151,7 @@
 					</div>
 				</div>
 				<div class="column__12 column__sm__6 column__md__3">
-					<div class="feature__card card__box">
+					<div class="feature__card card__box card__box__shadow">
 						<a href="">
 							<img src="images/icons/heart.png" alt="">
 							<p class="text__primary">
@@ -161,7 +161,7 @@
 					</div>
 				</div>
 				<div class="column__12 column__sm__6 column__md__3">
-					<div class="feature__card card__box">
+					<div class="feature__card card__box card__box__shadow">
 						<a href="">
 							<img src="images/icons/receive.png" alt="">
 							<p class="text__primary">
@@ -171,7 +171,7 @@
 					</div>
 				</div>
 				<div class="column__12 column__sm__6 column__md__3">
-					<div class="feature__card card__box">
+					<div class="feature__card card__box card__box__shadow">
 						<a href="">
 							<img src="images/icons/scholarship.png" alt="">
 							<p class="text__primary">
@@ -198,7 +198,7 @@
 					</div>
 					<!-- about content -->
 					<div class="column__12 column__lg__6">
-						<div class="about__desc__card card__box">
+						<div class="about__desc__card card__box card__box__shadow">
 							<h2 class="card__title text__second">Our Story</h2>
 							<h5 class="card__subtitle text__primary">Kind Heart Charity, Non-Profit Organization</h5>
 							<p>
@@ -208,7 +208,7 @@
 						<div class="row">
 							<!-- about story -->
 							<div class="column__12 column__md__6">
-								<div class="about__desc__card card__box">
+								<div class="about__desc__card card__box card__box__shadow">
 									<h5 class="card__subtitle text__primary">Our Mission</h5>
 									<p>
 										Sed leo nisl, posuere at molestie ac, suscipit auctor quis metus
@@ -221,7 +221,7 @@
 							</div>
 							<!-- about counter -->
 							<div class="column__12 column__md__6">
-								<div class="about__desc__card card__box">
+								<div class="about__desc__card card__box card__box__shadow">
 									<div class="about__counter">
 										<span class="counter__number text__primary">2020</span>
 										<span class="counter__title text__second">Founded</span>
@@ -308,7 +308,102 @@
 		</div>
 	</section>
 
-
+	<!--=============== causses donation ===============-->
+	<section id="causses" class="inner_space_y">
+		<div class="wrapper">
+			<div class="row j_c_center">
+				<div class="section__header">
+					<h2 class="section__title text__second">Our Causes</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="column_12 column__md__6 column__lg__4">
+					<!-- donation card -->
+					<div class="donation__card card__box mb_30">
+						<img src="images/causes/african.jpg" alt="">
+						<!-- donation content -->
+						<div class="donation__content p_20">
+							<h4 class="donation__title text__primary mb_20">Children Education</h4>
+							<p class="donation__text mb_20">Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus tempor</p>
+							<!-- donation progress bar-->
+							<div class="donation__progress border__radius__full">
+								<div class="donation__progress__bar border__radius__full bg__second" style="width:70%;"></div>
+							</div>
+							<!-- donation prices -->
+							<div class="donation__price d__flex j_c_between my_20">
+								<p>
+									<strong>Raised: </strong>
+									<span>$18,500</span>
+								</p>
+								<p>
+									<strong>Raised: </strong>
+									<span>$18,500</span>
+								</p>
+							</div>
+						</div>
+						<!-- donation button link -->
+						<a href="" class=" donation__btn bg__second button__link__second">Donate now</a>
+					</div>
+				</div>
+				<div class="column_12 column__md__6 column__lg__4">
+					<!-- donation card -->
+					<div class="donation__card card__box mb_30">
+						<img src="images/causes/class.jpg" alt="">
+						<!-- donation content -->
+						<div class="donation__content p_20">
+							<h4 class="donation__title text__primary mb_20">Children Education</h4>
+							<p class="donation__text mb_20">Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus tempor</p>
+							<!-- donation progress bar-->
+							<div class="donation__progress border__radius__full">
+								<div class="donation__progress__bar border__radius__full bg__second" style="width:70%;"></div>
+							</div>
+							<!-- donation prices -->
+							<div class="donation__price d__flex j_c_between my_20">
+								<p>
+									<strong>Raised: </strong>
+									<span>$18,500</span>
+								</p>
+								<p>
+									<strong>Raised: </strong>
+									<span>$18,500</span>
+								</p>
+							</div>
+						</div>
+						<!-- donation button link -->
+						<a href="" class=" donation__btn bg__second button__link__second">Donate now</a>
+					</div>
+				</div>
+				<div class="column_12 column__md__6 column__lg__4">
+					<!-- donation card -->
+					<div class="donation__card card__box mb_30">
+						<img src="images/causes/poor.jpg" alt="">
+						<!-- donation content -->
+						<div class="donation__content p_20">
+							<h4 class="donation__title text__primary mb_20">Children Education</h4>
+							<p class="donation__text mb_20">Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus tempor</p>
+							<!-- donation progress bar-->
+							<div class="donation__progress border__radius__full">
+								<div class="donation__progress__bar border__radius__full bg__second" style="width:70%;"></div>
+							</div>
+							<!-- donation prices -->
+							<div class="donation__price d__flex j_c_between my_20">
+								<p>
+									<strong>Raised: </strong>
+									<span>$18,500</span>
+								</p>
+								<p>
+									<strong>Raised: </strong>
+									<span>$18,500</span>
+								</p>
+							</div>
+						</div>
+						<!-- donation button link -->
+						<a href="" class=" donation__btn bg__second button__link__second">Donate now</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
