initilize volunteer section

--- a/index.html
+++ b/index.html
@@ -405,7 +405,12 @@
 		</div>
 	</section>
 
+	<!--================ Volunteer ===============-->
+	<section id="volunteer" class="inner_space_y">
+		<div class="wrapper">
 
+		</div>
+	</section>
 
 
 
