end design volunteer form

--- a/index.html
+++ b/index.html
@@ -406,9 +406,51 @@
 	</section>
 
 	<!--================ Volunteer ===============-->
-	<section id="volunteer" class="inner_space_y">
+	<section id="volunteer" class="bg__second inner_space_y">
 		<div class="wrapper">
+			<div class="row">
+				<!-- volunteer form column -->
+				<div class="column__12 column__lg__6">
+					<!-- volunteer title -->
+					<div class="section__header dark__bg">
+						<h2 class="section__title">Volunteer</h2>
+					</div>
+					<!-- volunteer form -->
+					<div class="volunteer__form card__box p_40">
+						<h3 class="form__title mb_30">Become a volunteer today</h3>
+						<form action="" method="post">
+							<div class="row">
+								<div class="input__col column__12 column__lg__6">
+									<input type="text" name="volunteer_name" class="mb_30 section__bg__color" placeholder="Raul Gonzales" required/>
+								</div>
+								<div class="input__col column__12 column__lg__6">
+									<input type="text" name="volunteer_email" class="mb_30 section__bg__color" placeholder="email@yahoo.com" required />
+								</div>
+								<div class="input__col column__12 column__lg__6">
+									<input type="text" name="volunteer_subject" class="mb_30 section__bg__color" placeholder="subject" required />
+								</div>
+								<!-- volunteer upload file -->
+								<div class="input__col column__12 column__lg__6">
+									<div class="input__file d__flex a_i_center section__bg__color">
+										<input type="file" name="volunteer_cv" id="v_cv" class="mb_30 section__bg__color" required />
+										<label for="v_cv">Upload CV</label>
+									</div>
+								</div>
+								<!-- form textarea -->
+								<div class="column__12">
+									<textarea name="volunteer_message" class="section__bg__color" ></textarea>
+								</div>
+								<!-- form submit button -->
+								<div class="column__12">
+									<button type="submit" class="button__link button__link__second bg__second"> Submit</button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
 
+				<!-- about volunteer -->
+			</div>
 		</div>
 	</section>
 
