end design volunteer about

--- a/index.html
+++ b/index.html
@@ -450,6 +450,18 @@
 				</div>
 
 				<!-- about volunteer -->
+				<div class="column__12 column__lg__6 dark__bg">
+					<div class="volunteer__col">
+						<!-- volunteer image -->
+						<div class="volunteer__image box__image">
+							<img src="images/smiling-badge.jpg" alt="" class="border__radius__full">
+						</div>
+						<!-- volunter title -->
+						<h3 class="section__title">About Volunteering</h3>
+						<!-- volunteer text	-->
+						<p class="section__text">Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito Professional charity theme based</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
