add style shape section

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 	</section>
 
 	<!--=============== call to action ===============-->
-	<section id="cta" class="cta__section inner_space_y">
+	<section id="cta" class="cta__section bg__shape inner_space_y">
 		<div class="wrapper">
 			<div class="row j_c_center a_i_center">
 				<!-- cta title -->
@@ -405,8 +405,8 @@
 		</div>
 	</section>
 
-	<!--================ Volunteer ===============-->
-	<section id="volunteer" class="bg__second inner_space_y">
+	<!--================= Volunteer ===============-->
+	<section id="volunteer" class="bg__second inner_space_y bg__shape">
 		<div class="wrapper">
 			<div class="row">
 				<!-- volunteer form column -->
@@ -466,6 +466,7 @@
 		</div>
 	</section>
 
+	<!--=============== blog posts =================-->
 
 
 </main>
