end design last post blog section

--- a/index.html
+++ b/index.html
@@ -467,7 +467,98 @@
 	</section>
 
 	<!--=============== blog posts =================-->
-
+	<section id="blogposts" class="inner_space_y">
+		<div class="wrapper">
+			<div class="row">
+				<div class="column__12">
+					<div class="section__header">
+						<h2 class="section__title">Last News</h2>
+					</div>
+				</div>
+				<div class="column__12 column__lg__7">
+					<div class="post__card mb_30">
+						<!-- post top -->
+						<div class="post__top mb_30">
+							<!-- post image -->
+							<a href="#">
+								<img src="images/news/close-up.jpg" alt="">
+							</a>
+							<!-- post tags -->
+							<div class="post__tags_block bg__second p_20">
+								<a href="#" class="post__tag link">Life Style</a>
+								<a href="#" class="post__tag link">Donation</a>
+							</div>
+						</div>
+						<!-- post bottom -->
+						<div class="post__bottom">
+							<!-- post meta -->
+							<div class="post__meta__block d__flex j_c_start mb_20">
+								<div class="post__meta post__author">
+									<i class="fa-light fa-calendar"></i>
+									October 13,2021
+								</div>
+								<div class="post__meta post__dtae">
+									<i class="fa-light fa-user"></i>
+									Admin
+								</div>
+								<div class="post__meta post__comments">
+									<i class="fa-light fa-message"></i>
+									45
+								</div>
+							</div>
+							<!-- post content -->
+							<div class="post__content">
+								<h3 class="post__title mb_20">
+									<a href="#" class="link">Clothing donation to urban area</a>
+								</h3>
+								<p class="post__text">Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito Professional charity theme based on Bootstrap</p>
+							</div>
+						</div>
+					</div>
+					<div class="post__card mb_30">
+						<!-- post top -->
+						<div class="post__top mb_30">
+							<!-- post image -->
+							<a href="#">
+								<img src="images/news/close-up.jpg" alt="">
+							</a>
+							<!-- post tags -->
+							<div class="post__tags_block bg__second p_20">
+								<a href="#" class="post__tag link">Life Style</a>
+								<a href="#" class="post__tag link">Donation</a>
+							</div>
+						</div>
+						<!-- post bottom -->
+						<div class="post__bottom">
+							<!-- post meta -->
+							<div class="post__meta__block d__flex j_c_start mb_20">
+								<div class="post__meta post__author">
+									<i class="fa-light fa-calendar"></i>
+									October 13,2021
+								</div>
+								<div class="post__meta post__dtae">
+									<i class="fa-light fa-user"></i>
+									Admin
+								</div>
+								<div class="post__meta post__comments">
+									<i class="fa-light fa-message"></i>
+									45
+								</div>
+							</div>
+							<!-- post content -->
+							<div class="post__content">
+								<h3 class="post__title mb_20">
+									<a href="#" class="link">Clothing donation to urban area</a>
+								</h3>
+								<p class="post__text">Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito Professional charity theme based on Bootstrap</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="column__12 column__lg__5"></div>
+			</div>
+		</div>
+	</section>
 
 </main>
 
