end sidebar search box

--- a/index.html
+++ b/index.html
@@ -555,7 +555,20 @@
 						</div>
 					</div>
 				</div>
-				<div class="column__12 column__lg__5"></div>
+				<div class="column__12 column__lg__5">
+					<aside class="sidebar__blog__post">
+						<div class="side__search__box section__bg__color mb_30">
+							<form action="" id="form__search">
+								<input type="text" id="search" class="" placeholder="Search" />
+								<i class="search__icon fa-light fa-search"></i>
+							</form>
+						</div>
+						<div class="side__widget">
+							<h4 class="side__widget__title mb_20">Last News</h4>
+						</div>
+					</aside>
+
+				</div>
 			</div>
 		</div>
 	</section>
