end sidebar categories list widget

--- a/index.html
+++ b/index.html
@@ -556,18 +556,120 @@
 					</div>
 				</div>
 				<div class="column__12 column__lg__5">
-					<aside class="sidebar__blog__post">
-						<div class="side__search__box section__bg__color mb_30">
-							<form action="" id="form__search">
-								<input type="text" id="search" class="" placeholder="Search" />
-								<i class="search__icon fa-light fa-search"></i>
-							</form>
-						</div>
-						<div class="side__widget">
-							<h4 class="side__widget__title mb_20">Last News</h4>
-						</div>
-					</aside>
+					<div class="column__12">
+						<aside class="sidebar__blog__post">
+							<!-- sidebar search box widget -->
+							<div class="side__search__box section__bg__color mb_30">
+								<form action="" id="form__search">
+									<input type="text" id="search" class="" placeholder="Search" />
+									<i class="search__icon fa-light fa-search"></i>
+								</form>
+							</div>
+							<!-- sidebar last post widget -->
+							<div class="side__widget mb_30">
+								<h4 class="widget__title text__primary mb_20">Last News</h4>
+								<div class="widget__content">
+									<div class="widget__postd__flex d__flex mb_30">
+										<div class="widget__post__image">
+											<a href="#">
+												<img src="images/news/together.jpg" alt="">
+											</a>
+										</div>
+										<div class="widget__post__content">
+											<h4 class="widget__post__title mb_20">
+												<a href="#" class="link">Food donation area</a>
+											</h4>
+											<div class="widget__post__meta">
+												<i class="fa-light fa-calendar"></i>
+												October 13,2021
+											</div>
+										</div>
+									</div>
+									<div class="widget__postd__flex d__flex mb_30">
+										<div class="widget__post__image">
+											<a href="#">
+												<img src="images/news/together.jpg" alt="">
+											</a>
+										</div>
+										<div class="widget__post__content">
+											<h4 class="widget__post__title mb_20">
+												<a href="#" class="link">Food donation area</a>
+											</h4>
+											<div class="widget__post__meta">
+												<i class="fa-light fa-calendar"></i>
+												October 13,2021
+											</div>
+										</div>
+									</div>
+									<div class="widget__postd__flex d__flex mb_30">
+										<div class="widget__post__image">
+											<a href="#">
+												<img src="images/news/together.jpg" alt="">
+											</a>
+										</div>
+										<div class="widget__post__content">
+											<h4 class="widget__post__title mb_20">
+												<a href="#" class="link">Food donation area</a>
+											</h4>
+											<div class="widget__post__meta">
+												<i class="fa-light fa-calendar"></i>
+												October 13,2021
+											</div>
+										</div>
+									</div>
+								</div>
 
+							</div>
+							<!--sidebar category widget -->
+							<div class="side__widget mb_30">
+								<h4 class="widget__title text__primary mb_20">Last News</h4>
+								<div class="widget__content">
+									<div class="widget__list__category">
+										<ul class="widget__list post__category">
+											<li class="widget__list__item">
+												<a href="#" class="widget__list__link link">Drinking water
+													<span class="category__count badges badges__second">34</span>
+												</a>
+											</li>
+											<li class="widget__list__item">
+												<a href="#" class="widget__list__link link">Drinking water
+													<span class="category__count badges badges__second">34</span>
+												</a>
+											</li>
+											<li class="widget__list__item">
+												<a href="#" class="widget__list__link link">Drinking water
+													<span class="category__count badges badges__second">34</span>
+												</a>
+											</li>
+											<li class="widget__list__item">
+												<a href="#" class="widget__list__link link">Drinking water
+													<span class="category__count badges badges__second">34</span>
+												</a>
+											</li>
+											<li class="widget__list__item">
+												<a href="#" class="widget__list__link link">Drinking water
+													<span class="category__count badges badges__second">34</span>
+												</a>
+											</li>
+
+
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="side__widget">
+								<h4 class="widget__title">Tags</h4>
+									<div class="widget__content">
+										<div class="widget__tags">
+
+										</div>
+									</div>
+
+							</div>
+
+
+						</aside>
+					</div>
 				</div>
 			</div>
 		</div>
