end design blog sidbare

--- a/index.html
+++ b/index.html
@@ -657,24 +657,26 @@
 									</div>
 								</div>
 							</div>
+							<!-- sidebar tags widget -->
 							<div class="side__widget">
-								<h4 class="widget__title">Tags</h4>
-									<div class="widget__content">
-										<div class="widget__tags">
-
-										</div>
+								<h4 class="widget__title text__primary mb_30">Tags</h4>
+								<div class="widget__content">
+									<div class="widget__tags">
+										<a href="" class="tags button__link__outline__second button__link">Donation</a>
+										<a href="" class="tags button__link__outline__second button__link">Donation</a>
+										<a href="" class="tags button__link__outline__second button__link">Donation</a>
+										<a href="" class="tags button__link__outline__second button__link">Donation</a>
+										<a href="" class="tags button__link__outline__second button__link">Donation</a>
+										<a href="" class="tags button__link__outline__second button__link">Donation</a>
 									</div>
-
+								</div>
 							</div>
-
-
 						</aside>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
 </main>
 
 
