end footer conatct widget

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 					</div>
 				</div>
 				<div class="column__12 column__lg__7">
-					<div class="post__card mb_30">
+					<article class="post__card mb_30">
 						<!-- post top -->
 						<div class="post__top mb_30">
 							<!-- post image -->
@@ -514,8 +514,8 @@
 								<p class="post__text">Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito Professional charity theme based on Bootstrap</p>
 							</div>
 						</div>
-					</div>
-					<div class="post__card mb_30">
+					</article>
+					<article class="post__card mb_30">
 						<!-- post top -->
 						<div class="post__top mb_30">
 							<!-- post image -->
@@ -553,7 +553,7 @@
 								<p class="post__text">Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito Professional charity theme based on Bootstrap</p>
 							</div>
 						</div>
-					</div>
+					</article>
 				</div>
 				<div class="column__12 column__lg__5">
 					<div class="column__12">
@@ -681,7 +681,45 @@
 
 
 <!--------- FOOTER ---------->
-<div id="footer"></div>
+<div id="footer">
+	<!-- footer top -->
+	<div class="footer__top inner_space_y bg__second">
+		<div class="wrapper">
+			<div class="row">
+				<div class="column__12 column__md__4">
+					<div class="widget__box mb_30">
+						<div class="widget__title__box mb_30">
+							<h4 class="widget__title text__primary">Contact Infomation</h4>
+						</div>
+						<div class="widget__content">
+							<ul class="contact__list">
+								<li class="contact__item">
+									<i class="fa-light fa-phone-volume"></i>
+									120-240-9600
+								</li>
+								<li class="contact__item">
+									<i class="fa-light fa-email"></i>
+									abcd@yahoo.com
+								</li>
+								<li class="contact__item">
+									<i class="fa-light fa-map-marker-alt"></i>
+									Akershusstranda 20, 0150 Oslo, Norway
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+
+			</div>
+		</div>
+	</div>
+	<!-- copyright section -->
+	<div class="footer__copyright">
+
+	</div>
+
+</div>
 
 
 <script src="js/slick.min.js"></script>
