end footer list widget

--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@
 	<div class="footer__top inner_space_y bg__second">
 		<div class="wrapper">
 			<div class="row">
+				<!-- widget contact -->
 				<div class="column__12 column__md__4">
 					<div class="widget__box mb_30">
 						<div class="widget__title__box mb_30">
@@ -709,7 +710,32 @@
 						</div>
 					</div>
 				</div>
+				<!-- about widget -->
 
+				<!-- list widget -->
+				<div class="column__12 column__md__4">
+					<div class="widget__box">
+						<div class="widget__title__box mb_30">
+							<h4 class="widget__title text__primary">Quick List</h4>
+						</div>
+						<div class="widget__content">
+							<ul class="widget__list dark__bg">
+								<li class="widget__list__item">
+									<a href="#" class="link">Our Story</a>
+								</li>
+								<li class="widget__list__item">
+									<a href="#" class="link">Our Story</a>
+								</li>
+								<li class="widget__list__item">
+									<a href="#" class="link">Our Story</a>
+								</li>
+								<li class="widget__list__item">
+									<a href="#" class="link">Our Story</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 
 			</div>
 		</div>
