--- a/index.html
+++ b/index.html
@@ -711,10 +711,19 @@
 					</div>
 				</div>
 				<!-- about widget -->
-
+				<div class="column__12 column__md__4">
+					<div class="widget__box mb_30">
+						<div class="widget__title__box mb_30">
+							<h4 class="widget__title text__primary">About Us</h4>
+						</div>
+						<div class="widget__content dark__bg">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet at blanditiis distinctio eaque necessitatibus nihil, odit quam voluptatem! Cumque doloribus ducimus eum facere id illum obcaecati saepe sapiente suscipit tenetur.</p>
+						</div>
+					</div>
+				</div>
 				<!-- list widget -->
 				<div class="column__12 column__md__4">
-					<div class="widget__box">
+					<div class="widget__box mb_30">
 						<div class="widget__title__box mb_30">
 							<h4 class="widget__title text__primary">Quick List</h4>
 						</div>
@@ -736,7 +745,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
